--- a/views/User.ejs
+++ b/views/User.ejs
@@ -10,16 +10,18 @@
       <div class="row">
         <div class="col-md-6">
           <label class="control-label">Last Name</label>
-          <input type="tel" class="form-control" id="lastname" name="lastname" placeholder="Doe" required>
+          <input class="form-control" id="lastname" name="lastname" placeholder="Doe" value="<% if (locals.delivery.lastname) { %><%= locals.delivery.lastname %><% } %>" onkeyup="Validate.String(this, 2, 128);" required>
+          <span id="i_lastname" class="form-info">Last Name must contain between 2 and 128 characters</span>
         </div>
         <div class="col-md-6">
           <label class="control-label">First Name</label>
-          <input class="form-control" id="firstname" name="firstname" placeholder="John" required>
+          <input class="form-control" id="firstname" name="firstname" placeholder="John" value="<% if (locals.delivery.firstname) { %><%= locals.delivery.firstname %><% } %>" onkeyup="Validate.String(this, 2, 128);" required>
+          <span id="i_firstname" class="form-info">First Name must contain between 2 and 128 characters</span>
         </div>
       </div>
     <div class="panel-body">
       <label class="control-label">Address</label>        
-      <input id="autocomplete" name="fulltext_address" placeholder="Enter your address" onFocus="geolocate()" type="text" class="form-control" required>
+      <input id="autocomplete" name="fulltext_address" placeholder="Enter your address" onFocus="geolocate()" class="form-control" value="<% if (locals.delivery.full_address) { %><%= locals.delivery.full_address %><% } %>" required>
       <div id="address">
         <div class="row">
             <!--<div class="col-md-6">
@@ -28,27 +30,32 @@
           </div>-->
           <div class="col-md-12">
             <label class="control-label">Route</label>
-            <input class="form-control" id="route" name="street_name" required>
+            <input class="form-control" id="route" name="street_name" value="<% if (locals.delivery.full_street) { %><%= locals.delivery.full_street %><% } %>" required>
           </div>
         </div>
         <div class="row">
           <div class="col-md-6">
             <label class="control-label">City</label>
-            <input class="form-control field" id="locality" name="city" placeholder="Paris" required>
+            <input class="form-control field" id="locality" name="city" placeholder="Paris" value="<% if (locals.delivery.city) { %><%= locals.delivery.city %><% } %>" required>
           </div>
           <div class="col-md-6"> 
             <label class="control-label">State</label>
-            <input class="form-control" id="administrative_area_level_1" name="state" placeholder="Île-de-France" required>
+            <input class="form-control" id="administrative_area_level_1" name="state" placeholder="Île-de-France" value="<% if (locals.delivery.state) { %><%= locals.delivery.state %><% } %>" required>
           </div>
         </div>
         <div class="row">
           <div class="col-md-6">
             <label class="control-label">Zip code</label>
-            <input class="form-control" id="postal_code" name="postal_code" placeholder="75001" required>
+            <input class="form-control" id="postal_code" name="postal_code" placeholder="75001" value="<% if (locals.delivery.zipcode) { %><%= locals.delivery.zipcode %><% } %>" required>
           </div>
           <div class="col-md-6">
             <label class="control-label">Country</label>
-            <input class="form-control" id="country" name="country" placeholder="France" required>
+            <input class="form-control" id="country" name="country" placeholder="France" value="<% if (locals.delivery.country) { %><%= locals.delivery.country %><% } %>" required>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6 offset-3">
+            <textarea id="instructions" class="blog-textarea mt-2" name="instructions" placeholder="Door code or other useful informations..."><% if (locals.delivery.instructions) { %><%= locals.delivery.instructions %><% } %></textarea>
           </div>
         </div>
       </div>
