--- a/views/User.ejs
+++ b/views/User.ejs
@@ -1,6 +1,16 @@
 <% include partials/head %>
 
 <div class="container">
+  <div class="orders">
+      <h1>Orders</h1>
+      <% if (locals.orders) { %>
+        <% Object.keys(locals.orders).forEach(function (index) { %>
+          <a href="/Order/<%= locals.orders[index]._id %>"><%= locals.orders[index]._id %></a><br/>
+        <% }) %>
+      <% } %>
+  </div>
+  <hr />
+
   <div class="panel-heading">
     <h2 class="panel-title">Delivery Informations</h2>
     <h6>*Make sure the informations you enter are correct, we will be using them for delivery</h6>
