moved single items display (gallery/shop/order/blog) into specific folder

--- a/views/single/Blog-single.ejs
+++ b/views/single/Blog-single.ejs
@@ -1,4 +1,4 @@
-<% include partials/head %>
+<% include ../partials/head %>
 
 <script src="/scripts/bootstrap-tagsinput.js"></script>
 
@@ -23,4 +23,4 @@
   <script src="/scripts/formFocus.js"></script>
 </div>
   
-<% include partials/footer %>
+<% include ../partials/footer %>
