--- a/views/single/Shop-single.ejs
+++ b/views/single/Shop-single.ejs
@@ -1,4 +1,4 @@
-<% include partials/head %>
+<% include ../partials/head %>
 
 <script src="/scripts/cart.js"></script>
 <div class="container">
@@ -27,7 +27,7 @@
 <script src="/scripts/frontValidation.js"></script>
 <script src="/scripts/formFocus.js"></script>
   
-<% include partials/footer %>
+<% include ../partials/footer %>
 
 <a class="lightbox-close" href="#close">
     <div class="lightbox-target" id="expand">
