--- a/views/single/Galerie-single.ejs
+++ b/views/single/Galerie-single.ejs
@@ -1,4 +1,4 @@
-<% include partials/head %>
+<% include ../partials/head %>
 
 <script src="/scripts/bootstrap-tagsinput.js"></script>
 
@@ -32,4 +32,4 @@
   </div>
 </a>
   
-<% include partials/footer %>
+<% include ../partials/footer %>
