--- a/views/single/Order-recap.ejs
+++ b/views/single/Order-recap.ejs
@@ -1,4 +1,4 @@
-<% include partials/head %>
+<% include ../partials/head %>
 
 <div class="container"> 
     <div class="container-cart">
@@ -52,4 +52,4 @@
     </div>
 </div>
   
-<% include partials/footer %>
+<% include ../partials/footer %>
