--- a/views/restricted/Order-manage.ejs
+++ b/views/restricted/Order-manage.ejs
@@ -1,5 +1,6 @@
 <% include ../partials/head %>
 
+<script src="/scripts/order.js"></script>
 <div class="container"> 
     <div class="container-cart">
         <h1>ORDER MANAGE</h1>
