--- a/views/restricted/Orders.ejs
+++ b/views/restricted/Orders.ejs
@@ -1,11 +1,16 @@
 <% include ../partials/head %>
 
+<script src="/scripts/order.js"></script>
 <div class="container container-blog">
     <div class="orders">
         <h1>Orders</h1>
         <% if (locals.orders) { %>
             <% Object.keys(locals.orders).forEach(function (index) { %>
-                <a href="/Admin/Order/<%= locals.orders[index]._id %>"><%= locals.orders[index]._id %></a> - STATUS: <%= locals.orders[index].status %> - LASTNAME: <%= locals.orders[index].lastname %><br/>
+                <a href="/Admin/Order/<%= locals.orders[index]._id %>"><%= locals.orders[index]._id %></a> - STATUS: <%= locals.orders[index].status %> - LASTNAME: <%= locals.orders[index].lastname %>
+                <% if (locals.orders[index].status === "Validated") { %> <!-- need better condition here -->
+                    <i style="color:red; cursor: pointer" onclick="cancelOrder('<%= locals.orders[index]._id %>')" class="far fa-times-circle">CANCEL ORDER</i>
+                <% } %>
+                <br/>
             <% }) %>
         <% } %>
     </div>
