--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,15 @@
   color: #333, black, #adadad, #a87906;
 }
 
+.inputfile {
+  width: 0;
+  height: 0;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+}
+
 /* Extra small devices (portrait phones, less than 576px)
  No media query for `xs` since this is the default in Bootstrap*/
 /* bootstrap uses min-width and starts from xs */
