--- a/views/restricted/Admin.ejs
+++ b/views/restricted/Admin.ejs
@@ -4,7 +4,8 @@
     <a href="/Admin/Orders">Orders</a> - 
     <a href="/Admin/Galerie/Post">Galerie</a> - 
     <a href="/Admin/Shop/Post">Shop</a> - 
-    <a href="/Admin/Blog/Post">Blog</a>
+    <a href="/Admin/Blog/Post">Blog</a> - 
+    <a href="/Admin/Front">Home page display</a>
 </div>
   
 <% include ../partials/footer %>
